FirstAppPage/manifests/ingressDemo-allAppDeployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2024-03-21T06:45:38Z"
    generation: 1
    name: default-backend
    namespace: app-space
    resourceVersion: "694"
    uid: 98e469dc-0880-41f1-97dd-da0e91a03f82
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: default-backend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: default-backend
      spec:
        containers:
        - image: kodekloud/ecommerce:404
          imagePullPolicy: Always
          name: simple-webapp
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-03-21T06:45:45Z"
      lastUpdateTime: "2024-03-21T06:45:45Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2024-03-21T06:45:38Z"
      lastUpdateTime: "2024-03-21T06:45:45Z"
      message: ReplicaSet "default-backend-79755fc44c" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2024-03-21T06:56:04Z"
    generation: 1
    name: webapp-food
    namespace: app-space
    resourceVersion: "1663"
    uid: db8b44b9-735e-45f8-bd5a-b268be3d67a0
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: webapp-food
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: webapp-food
      spec:
        containers:
        - image: kodekloud/ecommerce:food
          imagePullPolicy: Always
          name: webapp-food
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-03-21T06:56:08Z"
      lastUpdateTime: "2024-03-21T06:56:08Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2024-03-21T06:56:04Z"
      lastUpdateTime: "2024-03-21T06:56:08Z"
      message: ReplicaSet "webapp-food-786f75f797" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2024-03-21T06:45:38Z"
    generation: 1
    name: webapp-video
    namespace: app-space
    resourceVersion: "683"
    uid: dc374f5c-c8e3-416d-b810-c6460e8f3829
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: webapp-video
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: webapp-video
      spec:
        containers:
        - image: kodekloud/ecommerce:video
          imagePullPolicy: Always
          name: simple-webapp
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-03-21T06:45:44Z"
      lastUpdateTime: "2024-03-21T06:45:44Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2024-03-21T06:45:38Z"
      lastUpdateTime: "2024-03-21T06:45:44Z"
      message: ReplicaSet "webapp-video-74bf8df7f5" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2024-03-21T06:45:37Z"
    generation: 1
    name: webapp-wear
    namespace: app-space
    resourceVersion: "679"
    uid: 21af057f-3ff5-4de3-bd0f-23bc6c84b0b4
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: webapp-wear
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: webapp-wear
      spec:
        containers:
        - image: kodekloud/ecommerce:apparels
          imagePullPolicy: Always
          name: simple-webapp
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-03-21T06:45:43Z"
      lastUpdateTime: "2024-03-21T06:45:43Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2024-03-21T06:45:37Z"
      lastUpdateTime: "2024-03-21T06:45:43Z"
      message: ReplicaSet "webapp-wear-7b784f68d8" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2024-03-21T06:45:38Z"
    generation: 3
    name: ingress-wear-watch
    namespace: app-space
    resourceVersion: "1794"
    uid: 35908082-50ad-4f84-a264-48ef6772bd3b
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: wear-service
              port:
                number: 8080
          path: /wear
          pathType: Prefix
        - backend:
            service:
              name: video-service
              port:
                number: 8080
          path: /stream
          pathType: Prefix
        - backend:
            service:
              name: food-service
              port:
                number: 8080
          path: /eat
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.102.207.79
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-21T06:45:38Z"
    name: default-backend-service
    namespace: app-space
    resourceVersion: "596"
    uid: df1529a8-c220-4b33-9fbd-b6446b1ca4a6
  spec:
    clusterIP: 10.109.219.148
    clusterIPs:
    - 10.109.219.148
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: default-backend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-21T06:56:04Z"
    name: food-service
    namespace: app-space
    resourceVersion: "1643"
    uid: 07740d72-3561-4024-b7ad-416d66169a8d
  spec:
    clusterIP: 10.111.164.156
    clusterIPs:
    - 10.111.164.156
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: webapp-food
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-21T06:45:38Z"
    name: video-service
    namespace: app-space
    resourceVersion: "578"
    uid: 9cbfbf6d-4bf3-46b4-b653-9eb0079d284c
  spec:
    clusterIP: 10.109.12.95
    clusterIPs:
    - 10.109.12.95
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: webapp-video
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-21T06:45:38Z"
    name: wear-service
    namespace: app-space
    resourceVersion: "560"
    uid: 19c2b7f4-b233-4d4f-8ce4-737fd9b8ae86
  spec:
    clusterIP: 10.100.42.146
    clusterIPs:
    - 10.100.42.146
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: webapp-wear
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
