FirstAppPage/manifests/IngressDemo-svc.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-21T06:45:38Z"
    name: default-backend-service
    namespace: app-space
    resourceVersion: "596"
    uid: df1529a8-c220-4b33-9fbd-b6446b1ca4a6
  spec:
    clusterIP: 10.109.219.148
    clusterIPs:
    - 10.109.219.148
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: default-backend
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-21T06:45:38Z"
    name: video-service
    namespace: app-space
    resourceVersion: "578"
    uid: 9cbfbf6d-4bf3-46b4-b653-9eb0079d284c
  spec:
    clusterIP: 10.109.12.95
    clusterIPs:
    - 10.109.12.95
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: webapp-video
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2024-03-21T06:45:38Z"
    name: wear-service
    namespace: app-space
    resourceVersion: "560"
    uid: 19c2b7f4-b233-4d4f-8ce4-737fd9b8ae86
  spec:
    clusterIP: 10.100.42.146
    clusterIPs:
    - 10.100.42.146
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: webapp-wear
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
